[metadata]
author = SciTools Developers
author_email = scitools-iris-dev@googlegroups.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: Freely Distributable
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
description =
    Iris sample data 
download_url = https://github.com/SciTools/iris-sample-data
keywords =
    cf-metadata
    earth-science
    grib
    netcdf
    meteorology
    oceanography
    ugrid
license = Open Government
long_description = file: README.rst
long_description_content_type = text/x-rst
name = iris-sample-data
project_urls =
    Code = https://github.com/SciTools/iris-sample-data
    Issues = https://github.com/SciTools/iris-sample-data/issues
url = https://github.com/SciTools/iris-sample-data
version = attr: iris.__version__

[options]
include_package_data = True
packages = find:
python_requires =
    >=3.7
zip_safe = False

[options.package_data]
* = *.grib2, *.nc, *.pp

[options.packages.find]
include = iris_sample_data
